feat(db): 实现任务数据持久化并优化任务卡片组件
- 在 Home 组件中添加任务数据持久化逻辑，使用 Dexie 数据库
- 更新 TaskCard 组件，使其支持动态渲染任务数据- 添加 nanoid 依赖，用于生成唯一任务 ID
-调整数据库模式，将任务名称字段从 title 改为 taskName

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "lucide-react": "^0.511.0",
+    "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
