feat: 添加 Android 项目并配置 Capacitor
- 新增 Android项目目录结构
- 添加 Capacitor 配置文件
- 创建 AndroidManifest.xml 和布局文件
- 设置 up 的 build.gradle 文件
- 添加测试用例
- 配置 gitignore 文件
- 更新 package.json，添加 Capacitor 相关依赖

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pomodorotimer",
   "private": true,
+  "homepage": "./",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.3.0",
+    "@capacitor/cli": "^7.3.0",
+    "@capacitor/core": "^7.3.0",
     "@iconify/react": "^6.0.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
